--- a/client.properties
+++ b/client.properties
@@ -1,7 +1,7 @@
-base.url = https://bolt-qa.cardpointe.com:6443/api/v3
-api.key = aDlzqEdIK1EWFl6NqlEV2I1Iz0RghqRNdvFu19fWe2s=
-merchant.id = 848484848420 
-hsn = 13349PP80465298
+base.url = https://bolt-uat.cardpointe.com:6443/api/v3
+api.key = {Obtained from CardConnect}
+merchant.id = {Obtained from CardConnect}
+hsn = {Device Serial Number, obtained from CardConnect}
 connect.force = true
 readcard.include.signature = false
 readcard.amount.display = true
